# download_manager

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  downloaded.rs  file_download.rs  lib.rs  main.rs
src/app/: Download.tsx  Settings.tsx
src/assets/: Icons.tsx
src/components/: AppWindow.tsx  Buttons.tsx  Footer.tsx  Header.tsx  Inputs.tsx
